# snake_game

./: CMakeLists.txt  main.cpp
inc/: CMakeLists.txt  fruit.h  snake.h
inc/game/: CMakeLists.txt  snake.h
src/: CMakeLists.txt  fruit.cpp  main.cpp  snake.cpp
src/game/: main.cpp  snake.cpp
